--- a/web-app-todo/src/main/resources/application.properties
+++ b/web-app-todo/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.application.name=web-app-todo
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
+spring.mvc.format.date=yyyy-MM-dd
