--- a/web-api/src/main/resources/application.properties
+++ b/web-api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=web-api
-logging.level.org.springframework=debug
-spring.profiles.active=dev
+
+currency-service.url=https://aathieswar.vercel.app/
+currency-service.key=sjldksjasfj
+currency-service.user-name=AathiEswar
